--- a/main/homepage.html
+++ b/main/homepage.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="homepage.css">
 
 </head>
 
 <body>
+    <!-- navigation bar -->
     <div class="navbar">
         <h1 id="appname">PEARL LOVE FAHFAH</h1>
         <div class="navlist">
@@ -30,10 +31,31 @@
                 Cart
             </button>
         </div>
-        
+
         <button id="signin">
             Sign in
         </button>
+    </div>
+
+    <!-- search bar -->
+    <div class="searchbar">
+        <div class="searchbox">
+            <div class="searchimage">
+                <img scr="searchbar\search.png" width="20px" height="20px">
+            </div>
+
+            <div class="searchtextbox">
+                <input type="text">
+            </div>
+
+            <div class="searchbutton">
+                <button class="searchbutton" id="search">Search</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="content">
+
     </div>
 </body>
 
