--- a/main/homepage.html
+++ b/main/homepage.html
@@ -13,22 +13,22 @@
         <div class="navlist">
             <button class="navbutton" id="home">
                 <img src="navbarImages\home.png" alt="" width="20px" height="20px">
-                Home
+                <a href="/" class="navlink">Home</a>
             </button>
 
             <button class="navbutton" id="search">
                 <img src="navbarImages\search.png" alt="" width="20px" height="20px">
-                Search
+                <a href="/search" class="navlink " >Search</a>
             </button>
 
             <button class="navbutton" id="aboutus">
                 <img src="navbarImages\aboutus.png" alt="" width="20px" height="20px">
-                About Us
+                <a href="/aboutus" class="navlink">About Us</a>
             </button>
 
             <button class="navbutton" id="cart">
                 <img src="navbarImages\cart.png" alt="" width="20px" height="20px">
-                Cart
+                <a href="/cart" class="navlink">Cart</a>
             </button>
         </div>
 
