--- a/signin/signin.html
+++ b/signin/signin.html
@@ -43,7 +43,7 @@
                     <h1>Login</h1>
                     <h3>log in to access your account</h3>
                 </div>
-                <div class="loginform">
+                <form class="loginform">
                     <div class="textinput">
                         <input type="text" id="email">
                         <input type="text" id="password">
@@ -57,7 +57,7 @@
                         <button id="login">Log in</button>
                         <button id="adminlogin">Log In as Administrator</button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
 
