--- a/main/homepage.html
+++ b/main/homepage.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+    <link href="/output.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- navigation bar -->
     <div class="navbar bg-blue-400 flex items-center justify-between h-20">
         <h1 id="appname" class="pl-10 text-2xl">PEARL LOVE FAHFAH</h1>
-        <div class="navlist pl-40">
+        <div class="navlist pl-40 flex">
             <a href="/" class="navlink flex items-center">
                 <img src="navbarImages/home.png" alt="" class="w-5 h-5">
                 Home
