--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
 
 <body>
     <!-- navigation bar -->
-    <div class="navbar bg-customblue flex items-center justify-between h-20 ">
+    <nav class="navbar bg-customblue flex items-center justify-between h-20 ">
         <h1 id="appname" class="pl-10 text-2xl">PEARL LOVE FAHFAH</h1>
         <div class="navlist m-6 flex">
             <a href="/" class="navlink flex items-center">
@@ -30,20 +30,8 @@
         <form action="/signin">
             <button id="signin" class="bg-white pl-3 py-2 rounded">Sign in</button>
         </form>
-    </div>
-
-    <!-- search bar -->
-    <div class="searchbar bg-gray-300 h-20">
-        <div class="searchbox flex items-center justify-center">
-            <img src="searchbar/search.png" alt="" class="w-5 h-5">
-            <input type="text" class="ml-2 p-1">
-            <button class="ml-2 px-4 py-2 bg-blue-400 text-white rounded">Search</button>
-        </div>
-    </div>
-
-    <div class="content">
-
-    </div>
+    </nav>
+    
 </body>
 
 </html>
