--- a/html/signin.html
+++ b/html/signin.html
@@ -3,32 +3,34 @@
 
 <head>
     <link href="/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- navigation bar -->
-    <nav class="navbar bg-customblue flex items-center justify-between h-20 ">
-        <h1 id="appname" class="pl-10 text-2xl">PEARL LOVE FAHFAH</h1>
-        <div class="navlist m-6 flex">
-            <a href="/" class="navlink flex items-center">
-                <img src="/image/navbarImages/home.png" alt="" class="w-5 h-5">
+    <nav class="navbar bg-customblue flex items-center h-20">
+        <h1 id="appname" class="pl-10vw fz-24">PEARL LOVE FAHFAH</h1>
+        <div class="navlist pl-40vw flex">
+            <a href="/" class="navlink flex items-center fz-16">
+                <img src="/image/navbarImages/home.png" alt="" class="w-5 h-5 mr-1">
                 Home
             </a>
-            <a href="/search" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/search.png" alt="" class="w-5 h-5">
+            <a href="/search" class="navlink flex items-center pl-3 fz-16">
+                <img src="/image/navbarImages/search.png" alt="" class="w-5 h-5 mr-1">
                 Search
             </a>
-            <a href="/aboutus" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/aboutus.png" alt="" class="w-5 h-5">
+            <a href="/aboutus" class="navlink flex items-center pl-3 fz-16">
+                <img src="/image/navbarImages/aboutus.png" alt="" class="w-5 h-5 mr-1">
                 About Us
             </a>
-            <a href="/cart" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/cart.png" alt="" class="w-5 h-5">
+            <a href="/cart" class="navlink flex items-center pl-3 fz-16">
+                <img src="/image/navbarImages/cart.png" alt="" class="w-5 h-5 mr-1">
                 Cart
             </a>
         </div>
-        <form action="/signin">
-            <button id="signin" class="bg-white pl-3 py-2 rounded">Sign in</button>
+        <form action="/signin" method="" class="pl-4">
+            <button id="signin" class="bg-black text-white pl-3 pr-3 rounded fz-16">Sign in</button>
         </form>
     </nav>
     <!-- sign in box -->
@@ -58,7 +60,61 @@
         </div>
 
     </div>
-    
+
+    <footer class="w-screen bg-customblue p-4">
+
+        <div class="info flex p-2 justify-center h-dvh flex-wrap">
+            <!--only faculty and name-->
+            <div class="faculty">
+                <h1 class="fz-24 mb-2">PEARL LOVE FAH FAH</h1>
+                <h3 class="fz-16">Faculty of Information and</h3>
+                <h3 class="fz-16">Communication Technology (ICT),</h3>
+                <h3 class="fz-16">Mahidol University</h3>
+            </div>
+            <!--contact us-->
+            <div class="contactus ml-16">
+                <h1 class="fz-24 mb-4">Contact Us</h1>
+                <div class="contactinfo columns-2 flex">
+                    <!--first column-->
+                    <div class="c1">
+                        <div class="facebook flex mb-4">
+                            <img src="" alt="facebook" width="20px" height="20px">
+                            <h1 class="fz-16">PEARL LOVE FAHFAH Co., Ltd.</h1>
+                        </div>
+                        <div class="ig flex">
+                            <img src="" alt="ig" width="20px" height="20px">
+                            <h1 class="fz-16">PearlLoveFahFah</h1>
+                        </div>
+                    </div>
+                    <!--second column-->
+                    <div class="c2 ml-10">
+                        <div class="phone flex">
+                            <img src="" alt="phone" width="20px" height="20px">
+                            <h1 class="fz-16">08x-xxx-xxxx</h1>
+                        </div>
+                        <div class="email flex">
+                            <img src="" alt="email" width="20px" height="20px">
+                            <h1 class="fz-16">PearlLoveFahFah@gmail.com</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line mt-10 mb-4"></div>
+
+
+            <div class="under_line">
+                <div class="loc">
+                    <h4>999 Phutthamonthon Sai 4 Rd, Salaya, Phutthamonthon District, Nakhon Pathom 73170</h4>
+                </div>
+
+                <div class="privacy"></div>
+            </div>
+        </div>
+
+
+
+    </footer>
+
 </body>
 
 </html>
