--- a/html/signin.html
+++ b/html/signin.html
@@ -77,24 +77,24 @@
                 <div class="contactinfo columns-2 flex">
                     <!--first column-->
                     <div class="c1">
-                        <div class="facebook flex mb-4">
-                            <img src="" alt="facebook" width="20px" height="20px">
-                            <h1 class="fz-16">PEARL LOVE FAHFAH Co., Ltd.</h1>
+                        <div class="facebook flex mb-4 items-center">
+                            <img src="/image/footerImages/facebook.png" alt="facebook" width="37px" height="37px">
+                            <h1 class="fz-16 pl-2">PEARL LOVE FAHFAH Co., Ltd.</h1>
                         </div>
-                        <div class="ig flex">
-                            <img src="" alt="ig" width="20px" height="20px">
-                            <h1 class="fz-16">PearlLoveFahFah</h1>
+                        <div class="ig flex items-center">
+                            <img src="/image/footerImages/ig.png" alt="ig" width="37px" height="37px">
+                            <h1 class="fz-16 pl-2">PearlLoveFahFah</h1>
                         </div>
                     </div>
                     <!--second column-->
-                    <div class="c2 ml-10">
-                        <div class="phone flex">
-                            <img src="" alt="phone" width="20px" height="20px">
-                            <h1 class="fz-16">08x-xxx-xxxx</h1>
+                    <div class="c2 ml-20">
+                        <div class="phone flex items-center mb-4">
+                            <img src="/image/footerImages/phone.png" alt="phone" width="37px" height="20px">
+                            <h1 class="fz-16 pl-2">08x-xxx-xxxx</h1>
                         </div>
-                        <div class="email flex">
-                            <img src="" alt="email" width="20px" height="20px">
-                            <h1 class="fz-16">PearlLoveFahFah@gmail.com</h1>
+                        <div class="email flex items-center">
+                            <img src="/image/footerImages/email.png" alt="email" width="37px" height="37px">
+                            <h1 class="fz-16 pl-2">PearlLoveFahFah@gmail.com</h1>
                         </div>
                     </div>
                 </div>
@@ -102,12 +102,15 @@
             <div class="line mt-10 mb-4"></div>
 
 
-            <div class="under_line">
-                <div class="loc">
+            <div class="under_line flex">
+                <div class="loc poppin">
                     <h4>999 Phutthamonthon Sai 4 Rd, Salaya, Phutthamonthon District, Nakhon Pathom 73170</h4>
                 </div>
 
-                <div class="privacy"></div>
+                <div class="privacy flex fz-16 pl-20">
+                    <h4>Privacy Policy</h4>
+                    <h4 class="pl-4">Terms and Conditions</h4>
+                </div>
             </div>
         </div>
 
