--- a/html/signin.html
+++ b/html/signin.html
@@ -43,8 +43,8 @@
                 </div>
                 <form class="loginform" action="/signin-post" method="POST">
                     <div class="textinput flex flex-col">
-                        <input type="text" id="email" class="inputbox">
-                        <input type="text" id="password" class="inputbox">
+                        <input type="text" id="email" class="inputbox" placeholder="Email">
+                        <input type="text" id="password" class="inputbox" placeholder="password">
                     </div>
                     <div class="rememberandforgetpassword flex-row flex">
                         <div class="rememberme">
@@ -63,9 +63,8 @@
         </div>
 
     </div>
-
+    <!--footer-->
     <footer class="w-screen bg-customblue p-4">
-
         <div class="info flex p-2 justify-center h-dvh flex-wrap">
             <!--only faculty and name-->
             <div class="faculty">
