--- a/html/signin.html
+++ b/html/signin.html
@@ -10,7 +10,7 @@
 <body>
     <!-- navigation bar -->
     <nav class="navbar bg-customblue flex items-center h-20">
-        <h1 id="appname" class="pl-10vw fz-24">PEARL LOVE FAHFAH</h1>
+        <h1 id="appname" class="pl-10vw fz-24 whitespace-nowrap">PEARL LOVE FAHFAH</h1>
         <div class="navlist pl-40vw flex">
             <a href="/" class="navlink flex items-center fz-16">
                 <img src="/image/navbarImages/home.png" alt="" class="w-5 h-5 mr-1">
