--- a/html/cart.html
+++ b/html/cart.html
@@ -6,7 +6,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
-
+        const minus = document.querySelector('.decrease')
+        const plus = document.querySelector('.increase');
+        let number_element = document.getElementById("number")
+        console.log(number_element)
+        plus.addEventListener('click',() => {
+            let val = parseInt(number_element.innerText);
+            number_element.innerText = ++val
+        });
+        minus.addEventListener('click',() => {
+            let val = parseInt(number_element.innerText);
+            number_element.innerText = --val
+        });
     </script>
 </head>
 
@@ -53,7 +64,7 @@
                                 <h1 class="price fz-16" id="price" value="95">95 Baht</h1>
                                 <div class="quantity flex flex-row ">
                                     <button class="decrease">-</button>
-                                    <div class="currentquantity fz-16" quantity-value="1">hi</div>
+                                    <div class="currentquantity fz-16" id="number">1</div>
                                     <button class="increase"></button>
                                 </div>
                             </div>
