--- a/html/signin.html
+++ b/html/signin.html
@@ -4,10 +4,16 @@
 <head>
     <link href="/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <!-- temp nav bar-->
+    <nav class="navbar navbar-expand-lg bg-customblue">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">PEARL LOVE FAHFAH</a>
+        </div>
+    </nav>
     <!-- navigation bar -->
     <nav class="navbar bg-customblue flex items-center h-20">
         <h1 id="appname" class="pl-10vw fz-24 whitespace-nowrap">PEARL LOVE FAHFAH</h1>
@@ -119,7 +125,7 @@
 
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
