--- a/html/cart.html
+++ b/html/cart.html
@@ -4,148 +4,157 @@
 <head>
     <link href="/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script>
-        const minus = document.querySelector('.decrease')
-        const plus = document.querySelector('.increase');
-        let number_element = document.getElementById("number")
-        console.log(number_element)
-        plus.addEventListener('click',() => {
-            let val = parseInt(number_element.innerText);
-            number_element.innerText = ++val
-        });
-        minus.addEventListener('click',() => {
-            let val = parseInt(number_element.innerText);
-            number_element.innerText = --val
-        });
-    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- navigation bar -->
-    <nav class="navbar bg-customblue flex items-center h-20">
-        <h1 id="appname" class="pl-10vw fz-24 whitespace-nowrap">PEARL LOVE FAHFAH</h1>
-        <div class="navlist pl-40vw flex">
-            <a href="/" class="navlink flex items-center fz-16">
-                <img src="/image/navbarImages/home.png" alt="" class="w-5 h-5 mr-1">
-                Home
-            </a>
-            <a href="/search" class="navlink flex items-center pl-3 fz-16">
-                <img src="/image/navbarImages/search.png" alt="" class="w-5 h-5 mr-1">
-                Search
-            </a>
-            <a href="/aboutus" class="navlink flex items-center pl-3 fz-16">
-                <img src="/image/navbarImages/aboutus.png" alt="" class="w-5 h-5 mr-1">
-                About Us
-            </a>
-            <a href="/cart" class="navlink flex items-center pl-3 fz-16">
-                <img src="/image/navbarImages/cart.png" alt="" class="w-5 h-5 mr-1">
-                Cart
-            </a>
-        </div>
-        <form action="/signin" method="" class="pl-4">
-            <button id="signin" class="bg-black text-white pl-3 pr-3 rounded fz-16">Sign in</button>
-        </form>
-    </nav>
-    <!-- Cart -->
-    <div class="cartbg bg-customgray pt-16 pb-16 justify-center flex">
-        <div class="cartcontainer">
-            <h1 class="fz-48 pb-4">Cart</h1>
-            <div class="blackline bg-black h-1px"></div>
-            <div class="cartitemsandsummary flex flex-row">
-                <!--cart items-->
-                <div class="cartitems flex flex-col">
-                    <!--item-->
-                    <div class="item flex flex-row items-center">
-                        <img src="/image/footerImages/email.png" width="154px" height="154px">
-                        <div class="iteminfo pl-4">
-                            <div class="itemname pb-14 fz-24">Place Holder</div>
-                            <div class="itempriceandquantity flex flex-row justify-center w-fit">
-                                <h1 class="price fz-16" id="price" value="95">95 Baht</h1>
-                                <div class="quantity flex flex-row ">
-                                    <button class="decrease">-</button>
-                                    <div class="currentquantity fz-16" id="number">1</div>
-                                    <button class="increase"></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blackline bg-black h-1px"></div>
-                </div>
-                <!--order summary-->
-                <div class="ordersummary">
-                    <h1 class="fz-24 pb-4">Order Summary</h1>
-                    <div class="quantity fz-16"></div>
-                    <div class="originalprice fz-16"></div>
-                    <div class="promocode fz-16"></div>
-                    <div class="discount fz-16"></div>
-                    <div class="totalprice fz-16"></div>
-                    <div class="point fz-16"></div>
-                    <form>
-                        <button class="checkout" type="submit"></button>
+    <!--nav bar-->
+    <nav class="navbar navbar-expand-lg bg-customblue">
+        <div class="container-fluid">
+            <a class="navbar-brand fz-24 ps-5" href="/">PEARL LOVE FAHFAH</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link fz-24" href="/">
+                            <img src="/image/navbarImages/home.png" alt="home" class="w-5 h-5 mr-1">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/search">
+                            <img src="/image/navbarImages/search.png" alt="search" class="w-5 h-5">
+                            Search
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/aboutus">
+                            <img src="/image/navbarImages/aboutus.png" alt="aboutus" class="w-5 h-5">
+                            About Us
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">
+                            <img src="/image/navbarImages/cart.png" alt="cart" class="w-5 h-5">
+                            Cart
+                        </a>
+                    </li>
+                    <form action="/signin" method="" class="pl-4">
+                        <button id="signin" class="btn btn-dark">Sign in</button>
                     </form>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--cart-->
+    <div class="container-fluid bg-customgray py-5 d-flex">
+        <div class="cart mx-auto w-75">
+            <h1 class="fz-48">Cart</h1>
+            <hr>
+            <div class="row">
+                <div class="col-6 cartbox">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item bg-transparent">
+                            <div class="row">
+                                <!-- picture -->
+                                <div class="col-auto me-4">
+                                    <img src="/image/placeholdercart/spyxfam.png" class="img-fluid" width="156px" height="156px">
+                                </div>
+                                
+                                <!-- info -->
+                                <div class="col">
+                                    <div class="col h-100 d-flex flex-column">
+                                        <!--Title-->
+                                        <div class="row">
+                                            <h1 class="fz-24">Spy X Familiy Vol. 1</h1>
+                                        </div>
+                                        <!--Price and Quantity-->
+                                        <div class="row mt-auto">
+                                            <!--Price-->
+                                            <div class="col">
+                                                <h3 class="fz-24"> 95 Baht</h3>
+                                            </div>
+
+                                            <!--Quantity-->
+                                            <div class="col text-end pe-5">
+                                                <button type="button" class="btn btn-light fz-16 d-inline-block" id="decrease">-</button>
+                                                <h1 class="fz-16 d-inline-block">01</h1>
+                                                <button type="button" class="btn btn-light fz-16 d-inline-block" id="increase">+</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            
+                        </li>
+                        <li class="list-group-item bg-transparent">xd</li>
+                        <li class="list-group-item bg-transparent">xd</li>
+                    </ul>
+                </div>
+                <div class="col-3 ordersummarybox ms-auto">
+                    hello
                 </div>
             </div>
         </div>
-    </div>
-    <!--footer-->
-    <footer class="w-screen bg-customblue p-4">
+    </div> 
 
-        <div class="info flex p-2 justify-center h-dvh flex-wrap">
-            <!--only faculty and name-->
-            <div class="faculty">
+    <!--footer-->
+    <div class="container-fluid bg-customblue pt-4">
+        <div class="row justify-content-center mx-auto">
+            <div class="col col-3 text-left">
                 <h1 class="fz-24 mb-2">PEARL LOVE FAH FAH</h1>
                 <h3 class="fz-16">Faculty of Information and</h3>
                 <h3 class="fz-16">Communication Technology (ICT),</h3>
                 <h3 class="fz-16">Mahidol University</h3>
             </div>
-            <!--contact us-->
-            <div class="contactus ml-16">
-                <h1 class="fz-24 mb-4">Contact Us</h1>
-                <div class="contactinfo columns-2 flex">
-                    <!--first column-->
-                    <div class="c1">
-                        <div class="facebook flex mb-4 items-center">
-                            <img src="/image/footerImages/facebook.png" alt="facebook" width="37px" height="37px">
-                            <h1 class="fz-16 pl-2">PEARL LOVE FAHFAH Co., Ltd.</h1>
-                        </div>
-                        <div class="ig flex items-center">
-                            <img src="/image/footerImages/ig.png" alt="ig" width="37px" height="37px">
-                            <h1 class="fz-16 pl-2">PearlLoveFahFah</h1>
-                        </div>
+            <div class="col col-6">
+                <h1 class="fz-24">Contact Us</h1>
+                <div class="row row-cols-2">
+                    <div class="col">
+                        <img src="/image/footerImages/facebook.png" alt="facebook" width="37px" height="37px">
+                        <h1 class="fz-16 pl-2 d-inline-block">PEARL LOVE FAHFAH Co., Ltd.</h1>
                     </div>
-                    <!--second column-->
-                    <div class="c2 ml-20">
-                        <div class="phone flex items-center mb-4">
-                            <img src="/image/footerImages/phone.png" alt="phone" width="37px" height="20px">
-                            <h1 class="fz-16 pl-2">08x-xxx-xxxx</h1>
-                        </div>
-                        <div class="email flex items-center">
-                            <img src="/image/footerImages/email.png" alt="email" width="37px" height="37px">
-                            <h1 class="fz-16 pl-2">PearlLoveFahFah@gmail.com</h1>
-                        </div>
+                    <div class="col">
+                        <img src="/image/footerImages/phone.png" alt="phone" width="37px" height="37px">
+                        <h1 class="fz-16 pl-2 d-inline-block">08x-xxx-xxxx</h1>
+                    </div>
+                    <div class="col">
+                        <img src="/image/footerImages/ig.png" alt="ig" width="37px" height="37px">
+                        <h1 class="fz-16 pl-2 d-inline-block">PearlLoveFahFah</h1>
+                    </div>
+                    <div class="col">
+                        <img src="/image/footerImages/email.png" alt="email" width="37px" height="37px">
+                        <h1 class="fz-16 pl-2 d-inline-block">PearlLoveFahFah@gmail.com</h1>
                     </div>
                 </div>
             </div>
-            <div class="line mt-10 mb-4"></div>
 
-
-            <div class="under_line flex">
-                <div class="loc poppin">
-                    <h4>999 Phutthamonthon Sai 4 Rd, Salaya, Phutthamonthon District, Nakhon Pathom 73170</h4>
-                </div>
-
-                <div class="privacy flex fz-16 pl-20">
-                    <h4>Privacy Policy</h4>
-                    <h4 class="pl-4">Terms and Conditions</h4>
-                </div>
+        </div>
+        <hr class="hr w-75 justify-content-center mx-auto">
+        <div class="row justify-content-center mx-auto pb-3">
+            <div class="col-6 ">
+                <h3 class="fz-16 d-inline-block">999 Phutthamonthon Sai 4 Rd, Salaya, Phutthamonthon District, Nakhon
+                    Pathom 73170</h3>
+            </div>
+            <div class="col-3">
+                <h3 class="fz-16 d-inline-block pe-3">Privacy Policy</h3>
+                <h3 class="fz-16 d-inline-block">Terms and Conditions</h3>
             </div>
         </div>
 
-
-
-    </footer>
-
+    </div>
 </body>
+
 
 </html>
