--- a/html/homepage.html
+++ b/html/homepage.html
@@ -56,8 +56,23 @@
             </div>
         </div>
     </nav>
-    
+    <!--main page-->
 
+    <!--search bar-->
+    <div class="container-fluid bg-customdarkgray py-4">
+        <form class="input-group w-50 mx-auto" action="/search" method="get">
+            <img src="/image/navbarImages/search.png" width="30px" height="30px" class="my-auto mx-2">
+            <div class="form-floating">
+                <input type="text" class="form-control" id="searchbar" placeholder="">
+                <label for="searchbar">Item</label>
+            </div>
+            <button type="submit" class="btn btn-dark">Search</button>
+        </form>
+    </div>
+    <!--ads-->
+    <div class="container-fluid py-4 bg-customgray">
+            <img src="/image/mainpage/ads.png"class="img-fluid mx-auto d-block">
+    </div>
     <!--footer-->
     <div class="container-fluid bg-customblue pt-4">
         <div class="row justify-content-center mx-auto">
