--- a/html/admin.html
+++ b/html/admin.html
@@ -62,7 +62,22 @@
             <div class="row">
                 <!--left side of admin-->
                 <div class="col-4 adminbox">
-                    hi
+                    <div class="row row-cols-1 my-4">
+                        <div class="col text-center">
+                            <img src="/image/admin/admin.png" class="img-fluid" width="200px" height="200px">
+                        </div>
+                        <div class="col text-center my-4">
+                            <h1 class="fz-24">Hi</h1>
+                            <h1 class="fz-16">Admin</h1>
+                        </div>
+                        <form action="" method="">
+                            <div class="col d-grid">
+
+                                <button class="btn" style="--bs-btn-hover-bg: #D9D9D9; text-align: left; padding-left: 2rem;   font-family: 'Poppins', sans-serif;">Administration</button>
+
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <!--right side of admin-->
                 <div class="col-7 adminbox ms-auto">
