--- a/html/admin-product.html
+++ b/html/admin-product.html
@@ -76,6 +76,7 @@
         </div>
         <table class="table table-bordered table-striped table-hover">
           <thead>
+        <!--table headers (ID ISBN etc)-->
             <tr>
               <th scope="col">ID</th>
               <th scope="col">ISBN</th>
@@ -89,6 +90,7 @@
               <th scope="col">Actions</th>
             </tr>
           </thead>
+          <!--table body-->
           <tbody>
             <tr>
               <th scope="row">1</th>
@@ -158,6 +160,9 @@
             </tr>
           </tbody>
         </table>
+        <a href="/admin" class="link-decoration-none">
+          <button class="btn btn-dark">Back</button>
+        </a>
       </div>
     </div>
     
