--- a/html/search.html
+++ b/html/search.html
@@ -2,39 +2,320 @@
 <html>
 
 <head>
-    <link href="/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- navigation bar -->
-    <nav class="navbar bg-customblue flex items-center justify-between h-20 ">
-        <h1 id="appname" class="pl-10 text-2xl">PEARL LOVE FAHFAH</h1>
-        <div class="navlist m-6 flex">
-            <a href="/" class="navlink flex items-center">
-                <img src="/image/navbarImages/home.png" alt="" class="w-5 h-5">
-                Home
+  <!--nav bar-->
+  <nav class="navbar navbar-expand-lg bg-customblue">
+    <div class="container-fluid">
+      <a class="navbar-brand fz-24 ps-5" href="/">PEARL LOVE FAHFAH</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav justify-content-center ms-auto">
+          <li class="nav-item">
+            <a class="nav-link fz-24" href="/">
+              <img src="/image/navbarImages/home.png" alt="home" class="w-5 h-5 mr-1">
+              Home
             </a>
-            <a href="/search" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/search.png" alt="" class="w-5 h-5">
-                Search
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search">
+              <img src="/image/navbarImages/search.png" alt="search" class="w-5 h-5">
+              Search
             </a>
-            <a href="/aboutus" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/aboutus.png" alt="" class="w-5 h-5">
-                About Us
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/aboutus">
+              <img src="/image/navbarImages/aboutus.png" alt="aboutus" class="w-5 h-5">
+              About Us
             </a>
-            <a href="/cart" class="navlink flex items-center pl-3">
-                <img src="/image/navbarImages/cart.png" alt="" class="w-5 h-5">
-                Cart
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart">
+              <img src="/image/navbarImages/cart.png" alt="cart" class="w-5 h-5">
+              Cart
             </a>
+          </li>
+          <form action="/signin" method="" class="pl-4">
+            <button id="signin" class="btn btn-dark">Sign in</button>
+          </form>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--search page-->
+  <div id="wrap">
+    <div id="contentWrap">
+      <h1 class="catTtl">ADVANCED SEARCH</h1>
+      <div id="subContents">
+        <div id="form">
+          <div id="contactBox">
+            <p class="note">Please complete the fields below.<br>Click Search button to search.</p>
+            <form action="/advanced_search" method="post">
+              <div class="custom-selectbox">
+                <dl class="first">
+                  <dt>
+                    <label for="taxon">Category</label>
+                  </dt>
+                  <dd>
+                    <select class="selectBox" id="taxon" name="taxon">
+                      <option value="">All</option>
+                      <option value="2">English Books</option>
+                      <option value="3">Chinese Books</option>
+                      <option value="4">Japanese Books</option>
+                      <option value="5">Thai Books</option>
+                      <option value="6">Comics/Manga</option>
+                    </select>
+                  </dd>
+
+                </dl>
+              </div>
+
+              <dl class="mb30">
+                <dt>
+                  <label for="isbn">ISBN</label>
+                </dt>
+                <dd>
+                  <input class="textArea" id="isbn" name="isbn" type="text" value="">
+                  <error class="errors"></error>
+                </dd>
+              </dl>
+
+              <ul class="clearfix">
+                <li class="fl"><input type="submit" value="SEARCH" class="btnSearch"></li>
+                <li class="fl"><input type="reset" value="CLEAR" class="btnClear"></li>
+              </ul>
+            </form>
+
+            <form action="/products" method="get" id="detail-search">
+              <div>
+                <input type="hidden" name="utf8" value="&#x2713;">
+                <input type="hidden" name="is_searching" value="true">
+              </div>
+
+              <div class="custom-selectbox">
+                <dl class="first">
+                  <dt>
+                    <label for="taxon">Category</label>
+                  </dt>
+                  <dd>
+                    <select class="categorySearchSelect" id="taxon" name="taxon">
+                      <option value="">All</option>
+                      <option value="2">English Books</option>
+                      <option value="3">Chinese Books</option>
+                      <option value="4">Japanese Books</option>
+                      <option value="5">Thai Books</option>
+                      <option value="6">Comics/Manga</option>
+                    </select>
+                  </dd>
+
+                </dl>
+              </div>
+
+              <dl>
+                <dt>
+                  <label for="restrictBy_title">Title</label>
+                <dd>
+                  <input class="textArea search-field" id="restrictBy_title" name="restrictBy[title]" type="text"
+                    value="">
+                </dd>
+              </dt>
+              </dl>
+
+              <dl>
+                <dt>
+                  <label for="author_input">Author</label>
+                </dt>
+                </dd>
+                  <input class="textArea search-field" id="author_input" name="restrictBy[author]" type="text" value="">
+                </dd>
+              </dl>
+
+              <dl>
+                <dt>
+                  <label for="publisher_input">Publisher</label>
+                </dt>
+                </dd>
+                <input class="textArea search-field" id="publisher_input" name="restrictBy[publisher]" type="text"
+                  value="">
+                </dd>
+              </dl>
+
+              <dl>
+                <dt>
+                  <label for="all">Limit to available items</label>
+                </dt>
+                <dd>
+                  <input type="checkbox" id="checkbox" name="restrictBy[available_only]" value="1" checked>
+                  Available ONLY
+                </dd>
+              </dl>
+
+
+              <div class="custom-selectbox sBox">
+                <dl>
+                  <dt>
+                    <label for="pubdate_from_year">Publication Date</label>
+                  </dt>
+                  <dd>
+                    <select class="selectBox" name="pubdate_from_year">
+                      <option value="">Year</option>
+                      <option value="2024">2024</option>
+                      <option value="2023">2023</option>
+                      <option value="2022">2022</option>
+                      <option value="2021">2021</option>
+                      <option value="2020">2020</option>
+                      <option value="2019">2019</option>
+                      <option value="2018">2018</option>
+                      <option value="2017">2017</option>
+                      <option value="2016">2016</option>
+                      <option value="2015">2015</option>
+                      <option value="2014">2014</option>
+                    </select>
+                    <select class="selectBox" name="pubdate_from_month">
+                      <option value="">Month</option>
+                      <option value="01">January</option>
+                      <option value="02">February</option>
+                      <option value="03">March</option>
+                      <option value="04">April</option>
+                      <option value="05">May</option>
+                      <option value="06">June</option>
+                      <option value="07">July</option>
+                      <option value="08">August</option>
+                      <option value="09">September</option>
+                      <option value="10">October</option>
+                      <option value="11">November</option>
+                      <option value="12">December</option>
+                    </select>
+                    <span class="from">~</span>
+                    <select class="selectBox" name="pubdate_to_year">
+                      <option value="">Year</option>
+                      <option value="2024">2024</option>
+                      <option value="2023">2023</option>
+                      <option value="2022">2022</option>
+                      <option value="2021">2021</option>
+                      <option value="2020">2020</option>
+                      <option value="2019">2019</option>
+                      <option value="2018">2018</option>
+                      <option value="2017">2017</option>
+                      <option value="2016">2016</option>
+                      <option value="2015">2015</option>
+                      <option value="2014">2014</option>
+                    </select>
+                    <select class="selectBox" name="pubdate_to_month">
+                      <option value="">Month</option>
+                      <option value="01">January</option>
+                      <option value="02">February</option>
+                      <option value="03">March</option>
+                      <option value="04">April</option>
+                      <option value="05">May</option>
+                      <option value="06">June</option>
+                      <option value="07">July</option>
+                      <option value="08">August</option>
+                      <option value="09">September</option>
+                      <option value="10">October</option>
+                      <option value="11">November</option>
+                      <option value="12">December</option>
+                    </select>
+                    <error class="errors" id="error-pubdate" style="display:none;">Please select publication year
+                    </error>
+                    <error class="errors" id="error-pubdate-order" style="display:none;">To date should be greater than
+                      from date</error>
+                  </dd>
+                </dl>
+              </div>
+
+
+              <div class="custom-selectbox sBox">
+                <dl class="mb30">
+                  <dt>
+                    <label for="per_page">Results per page</label>
+                  </dt>
+                  <dd>
+                    <select class="selectBox" id="per_page" name="per_page">
+                      <option value="20">20</option>
+                      <option value="40">40</option>
+                      <option value="60">60</option>
+                      <option value="80">80</option>
+                      <option value="100">100</option>
+                    </select>
+                  </dd>
+                </dl>
+              </div>
+
+
+
+              <ul class="clearfix">
+                <li class="fl"><input type="submit" value="SEARCH" class="btnSearch"></li>
+                <li class="fl"><input type="reset" value="CLEAR" class="btnClear"></li>
+              </ul>
+            </form>
+          </div>
         </div>
-        <form action="/signin">
-            <button id="signin" class="bg-white pl-3 py-2 rounded">Sign in</button>
-        </form>
-    </nav>
-    
-    
+      </div>
+    </div>
+  </div>
+
+
+  <!--footer-->
+  <div class="container-fluid bg-customblue pt-4">
+    <div class="row justify-content-center mx-auto">
+      <div class="col col-3 text-left">
+        <h1 class="fz-24 mb-2">PEARL LOVE FAH FAH</h1>
+        <h3 class="fz-16">Faculty of Information and</h3>
+        <h3 class="fz-16">Communication Technology (ICT),</h3>
+        <h3 class="fz-16">Mahidol University</h3>
+      </div>
+      <div class="col col-6">
+        <h1 class="fz-24">Contact Us</h1>
+        <div class="row row-cols-2">
+          <div class="col">
+            <img src="/image/footerImages/facebook.png" alt="facebook" width="37px" height="37px">
+            <h1 class="fz-16 pl-2 d-inline-block">PEARL LOVE FAHFAH Co., Ltd.</h1>
+          </div>
+          <div class="col">
+            <img src="/image/footerImages/phone.png" alt="phone" width="37px" height="37px">
+            <h1 class="fz-16 pl-2 d-inline-block">08x-xxx-xxxx</h1>
+          </div>
+          <div class="col">
+            <img src="/image/footerImages/ig.png" alt="ig" width="37px" height="37px">
+            <h1 class="fz-16 pl-2 d-inline-block">PearlLoveFahFah</h1>
+          </div>
+          <div class="col">
+            <img src="/image/footerImages/email.png" alt="email" width="37px" height="37px">
+            <h1 class="fz-16 pl-2 d-inline-block">PearlLoveFahFah@gmail.com</h1>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <hr class="hr w-75 justify-content-center mx-auto">
+    <div class="row justify-content-center mx-auto pb-3">
+      <div class="col-6 ">
+        <h3 class="fz-16 d-inline-block">999 Phutthamonthon Sai 4 Rd, Salaya, Phutthamonthon District, Nakhon
+          Pathom 73170</h3>
+      </div>
+      <div class="col-3">
+        <h3 class="fz-16 d-inline-block pe-3">Privacy Policy</h3>
+        <h3 class="fz-16 d-inline-block">Terms and Conditions</h3>
+      </div>
+    </div>
+
+  </div>
+
 </body>
+
 
 </html>
