--- a/html/search.html
+++ b/html/search.html
@@ -70,7 +70,7 @@
                     <label for="taxon">Category</label>
                   </dt>
                   <dd>
-                    <select class="selectBox" id="taxon" name="taxon">
+                    <select class="categorySearchSelect" id="taxon" name="taxon">
                       <option value="">All</option>
                       <option value="2">English Books</option>
                       <option value="3">Chinese Books</option>
