--- a/html/admin.html
+++ b/html/admin.html
@@ -27,7 +27,11 @@
                 window.location.href = "http://localhost:3000/signin"
             }
             
+            if(!id){
+                window.location.href = "http://localhost:3000/signin"
+            }
 
+        
 
             fetch("http://localhost:3001/current-user",
                 {
@@ -142,6 +146,12 @@
                         window.alert('Error deleting admin. Please try again.');
                     });
             });
+
+            $(document).on('click', '#logout', function () {
+                document.cookie = "id=; path=/";
+                window.alert("Logged out");
+                window.location.href = "http://localhost:3000/signin"
+            });
         })
     </script>
 </head>
@@ -219,6 +229,12 @@
                                 </button>
                             </div>
                         </a>
+                        <div class="col d-grid ps-4 pt-4">
+                            <button class="btn btn-dark w-fit"
+                                style="text-align: left;   font-family: 'Poppins', sans-serif;" id="logout">
+                                Logout
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <!--right side of admin-->
