--- a/html/signin.html
+++ b/html/signin.html
@@ -119,7 +119,7 @@
                     </div>
                     <!--Password Input-->
                     <div class="form-floating mb-1">
-                        <input id="password" class="form-control inputbox" placeholder="Password" name="password">
+                        <input id="password" type="password" class="form-control inputbox" placeholder="Password" name="password">
                         <label for="password">Password</label>
                     </div>
                     <!--remember me and forget password row-->
